# ServiceApp

./: .gitignore  README.md
server/: CMakeLists.txt
server/src/: database.cpp  main.cpp  routes.cpp
